--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
   <body class="body">
 	@@include('blocks/page-header.html')
 	<main class="main">
-    @@include('blocks/section-title.html')
+    @@include('blocks/promo.html')
     @@include('blocks/about.html')
     @@include('blocks/events-short.html')
     @@include('blocks/blog-listing.html', {"class": "home__blog-listing"})
