--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,7 +8,7 @@
       @@include('blocks/promo.html')
       @@include('blocks/event-pp.html')
       @@include('blocks/about.html')
-      @@include('blocks/events-short.html')
+      @@include('blocks/upcoming.html')
       @@include('blocks/blog-listing.html', {"class": "home__blog-listing"})
       @@include('blocks/contacts.html')
       @@include('blocks/do-it.html', {"class": "home__do-it"})
