--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,6 +19,8 @@
   <script src="scripts/jquery-3.7.1.min.js"></script>
   <script src="scripts/jquery.selectric.min.js"></script>
   <script src="scripts/jquery.mask.min.js"></script>
+  <script src="scripts/jquery.validate.min.js"></script>
+  <script src="scripts/jquery.validate-init.js"></script>
   <script src="scripts/air-datepicker.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key="></script>
   <script src="scripts/swiper.min.js"></script>
