--- a/src/html/blocks/promo.html
+++ b/src/html/blocks/promo.html
@@ -1,11 +1,6 @@
 <header class="promo">
     <H1  class="promo__title">арт — пространство</H1>
-    <picture class="promo__picture">
-        <!-- <svg class="" width="1920" height="325">
-            <use xlink:href="assets/icons/symbols.svg#LENNI"></use>
-        </svg> -->
-        <img src="assets/images/LENNI.svg" alt="logo" class="" width="1920" height="325">
-    </picture>
+    <img src="assets/images/LENNI.png" alt="logo" class="promo__image" >
     <H2 class="promo__text">для людей, горящих сердцем и делом<br/>место для настоящего</H2>
         <div class="promo__i-want-container">
             <div class="promo__text promo__text--small">Я хочу:</div>
