--- a/src/html/blocks/contacts.html
+++ b/src/html/blocks/contacts.html
@@ -6,6 +6,9 @@
                 <svg class="contacts__icon" width="110" height="110">
                     <use xlink:href="assets/icons/symbols.svg#location"></use>
                 </svg>
+                <svg class="contacts__icon-small" width="65" height="65">
+                    <use xlink:href="assets/icons/symbols.svg#location-small"></use>
+                </svg>
                 <div class="contacts__element-info">
                     <h4 class="contacts__element-title">Томск, Белая 8</h4>
                     <div class="contacts__element-desc">2 этаж</div>
@@ -16,20 +19,26 @@
                 <svg class="contacts__icon" width="110" height="110">
                     <use xlink:href="assets/icons/symbols.svg#home"></use>
                 </svg>
+                <svg class="contacts__icon-small" width="65" height="65">
+                    <use xlink:href="assets/icons/symbols.svg#home-small"></use>
+                </svg>
                 <div class="contacts__element-info">
                     <h4 class="contacts__element-title">Отдел аренды</h4>
-                    <a href="tel:74993500730" class="contacts__element-desc">+7 499 350 0730</a>
-                    <a href="mailto:hi@tagree.ru" class="contacts__element-desc">hi@tagree.ru</a>
+                    <a href="tel:74993500730" class="contacts__element-desc-link">+7 499 350 0730</a>
+                    <a href="mailto:hi@tagree.ru" class="contacts__element-desc-link">hi@tagree.ru</a>
                 </div>
             </div>
             <div class="contacts__element">
                 <svg class="contacts__icon" width="110" height="110">
                     <use xlink:href="assets/icons/symbols.svg#star"></use>
                 </svg>
+                <svg class="contacts__icon-small" width="65" height="65">
+                    <use xlink:href="assets/icons/symbols.svg#star-small"></use>
+                </svg>
                 <div class="contacts__element-info">
                     <h4 class="contacts__element-title">Отдел мероприятий</h4>
-                    <a href="tel:74993500730" class="contacts__element-desc">+7 499 350 0730</a>
-                    <a href="mailto:hi@tagree.ru" class="contacts__element-desc">hi@tagree.ru</a>
+                    <a href="tel:74993500730" class="contacts__element-desc-link">+7 499 350 0730</a>
+                    <a href="mailto:hi@tagree.ru" class="contacts__element-desc-link">hi@tagree.ru</a>
                 </div>
             </div>
         </div>
