--- a/src/html/blocks/page-footer.html
+++ b/src/html/blocks/page-footer.html
@@ -17,17 +17,17 @@
             <div class="subscribe-form__wrapper">
                 <div class="subscribe-form__field-and-error-wrapper">
                     <div class="subscribe-form__field-wrapper">
-                        <input name="email" type="email" placeholder="Email" class="subscribe-form-input field__input"
+                        <input name="email" type="email" placeholder="Email" class="field__input subscribe-form__input"
                             required />
                     </div>
                     <button type="submit" class="subscribe-form__submit">Подписаться</button>
                 </div>
 
-                <label class="subscribe-form__check check">
+                <label class="check subscribe-form__check">
                     <div class="subscribe-form__error-wrapper">
                         <input name="agree" type="checkbox" class="check__input" required checked />
                         <span class="check__mark"></span>
-                        <span class="check__label">Согласен на обработку персональных данных</span>
+                        <span class="check__label subscribe-form__check-label">Согласен на обработку персональных данных</span>
                     </div>
                 </label>
 
