--- a/src/html/blocks/page-header.html
+++ b/src/html/blocks/page-header.html
@@ -1,7 +1,7 @@
 <header class = "page-header">
     <div class="page-header__container">
-        <a href="index.html" class="page-header__logo">
-            <img class="page-header__logo-icon" src="assets/icons/logo.png"><!--width="202" height="147"-->
+        <a href="index.html" alt="icon" class="page-header__logo">
+            <img class="page-header__logo-icon" src="assets/icons/logo.png">
             </img>
         </a>
         <nav class="page-header__nav">
