--- a/src/html/blocks/page-footer.html
+++ b/src/html/blocks/page-footer.html
@@ -40,10 +40,16 @@
                 <svg class="socials__icon" width="58" height="58">
                     <use xlink:href="assets/icons/symbols.svg#insta"></use>
                 </svg>
+                <svg class="socials__icon-small" width="48" height="48">
+                    <use xlink:href="assets/icons/symbols.svg#insta-small"></use>
+                </svg>
             </a>
             <a href="#" class="page-footer__social socials__link">
                 <svg class="socials__icon" width="58" height="58">
                     <use xlink:href="assets/icons/symbols.svg#vk"></use>
+                </svg>
+                <svg class="socials__icon-small" width="48" height="48">
+                    <use xlink:href="assets/icons/symbols.svg#vk-small"></use>
                 </svg>
             </a>
         </div>
