--- a/src/html/event.html
+++ b/src/html/event.html
@@ -79,9 +79,9 @@
                                         <span class="reserve__check-label check__label">3 стол</span>
                                     </label>
                                     <label class="check check--red">
-                                        <input name="agree" type="checkbox" class="check__input"/>
-                                        <span class="check__mark"></span> 
-                                        <span class="reserve__check-label check__label">4 стол</span>
+                                        <input name="agree" type="checkbox" class="check__input--red check__input"/>
+                                        <span class="check__mark--red check__mark"></span> 
+                                        <span class="reserve__check-label check__label--red check__label">4 стол</span>
                                     </label>
                                     <label class="check--gray check">
                                         <span class="check__mark--gray check__mark"></span> 
@@ -122,7 +122,7 @@
                             </div>
                             <div class="reserve__scheme">
                                 <h5 class="reserve__header header__h4 header">Сцена</h5>
-                                <svg class="page-header__logo-icon" width="780" height="399">
+                                <svg class="" width="780" height="399">
                                     <use xlink:href="assets/icons/symbols.svg#map"></use>
                                 </svg>
                             </div>
