--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,7 +23,8 @@
   <script src="scripts/jquery.validate-init.js"></script>
   <script src="scripts/air-datepicker.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key="></script>
-  <script src="scripts/swiper.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script src="scripts/main.min.js"></script>
 </body>
 
