--- a/src/html/blocks/upcoming.html
+++ b/src/html/blocks/upcoming.html
@@ -78,13 +78,13 @@
       </div>
       <footer class="swiper-footer">
         <button type="button" class="swiper-arrow-prev upcoming__arrow upcoming__arrow--left">
-          <svg class="arrow__icon" width="92" height="62">
+          <svg class="arrow-icon" width="92" height="62">
             <use xlink:href="assets/icons/symbols.svg#arrow"></use>
           </svg>
         </button>
         <div class="swiper-pagination"></div>
         <button type="button" class="swiper-arrow-next upcoming__arrow">
-          <svg class="arrow__icon" width="92" height="62">
+          <svg class="arrow-icon" width="92" height="62">
             <use xlink:href="assets/icons/symbols.svg#arrow"></use>
           </svg>
         </button>
