--- a/src/html/blocks/upcoming.html
+++ b/src/html/blocks/upcoming.html
@@ -1,5 +1,11 @@
+<div class="upcoming__triangle-top">
+<div class="upcoming__triangle-top-1"></div>
+<div class="upcoming__triangle-top-2"></div>
+</div>
 <div class="upcoming">
+  
   <div class="upcoming__container">
+    
     <h2 class="header header__h2 upcoming__header">МЕРОПРИЯТИЯ</h2>
     <div class="upcoming__swiper swiper swiper--3s js-swiper">
       <div class="swiper-wrapper">
@@ -93,3 +99,7 @@
     <a href="#" class="upcoming__see-all">Смотреть все</a>
   </div>
 </div>
+<div class="upcoming__triangle-bottom">
+  <div class="upcoming__triangle-bottom-1"></div>
+  <div class="upcoming__triangle-bottom-2"></div>
+  </div>
